[package]
name = "gene_normalizer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
flate2 = "1.1.9"
reqwest = { version = "0.13.4", features = ["blocking"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "lookup"
harness = false